# nanodet-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
data/: coco_labels.txt  nanodet-plus-m_416.param  nanodet-plus-m_416_openvino.xml
examples/: ncnn_image.rs  opencv.rs  openvino_opencv.rs
src/: bbox.rs  decoder.rs  image_util.rs  lib.rs  util.rs
src/image_utils/: image.rs  mod.rs  opencv.rs
