[package]
name = "nanodet-rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
# ncnn support
ncnn = ["dep:ncnn-rs"]
# openvino support
openvino = ["dep:openvino"]
# opencv image utilities
opencv = ["dep:opencv"]
# rust image utilities
image = ["dep:image", "dep:imageproc", "dep:rusttype"]

[dependencies]
# Used with feature "ncnn"
ncnn-rs = { git = "https://github.com/tpoisonooo/rust-ncnn", optional = true }

# Used with feature "openvino". Using a fork until #54, #55 and #56 are merged.
openvino = { git = "https://github.com/chemicstry/openvino-rs", optional = true }

# Used with feature "opencv"
opencv = { version = "0.70", optional = true }

# Used with feature "image"
image = { version = "0.24", optional = true }
imageproc = { version = "0.23", optional = true }
rusttype = { version = "0.9", optional = true }

[dev-dependencies]
show-image = { version = "0.13.0", features = ["image"] }
