[package]
name = "nanodet-rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
# ncnn support
ncnn = ["dep:ncnn-rs"]
# openvino support
openvino = ["dep:openvino"]
# opencv image utilities
opencv = ["dep:opencv"]
# rust image utilities
image = ["dep:image", "dep:imageproc", "dep:ab_glyph"]

[dependencies]
# Used with feature "ncnn"
ncnn-rs = { git = "https://github.com/tpoisonooo/rust-ncnn", optional = true }

# Used with feature "openvino". Using a fork until #54, #55 and #56 are merged.
openvino = { version = "0.8", optional = true }

# Used with feature "opencv"
opencv = { version = "0.94", optional = true }

# Used with feature "image"
image = { version = "0.25", optional = true }
imageproc = { version = "0.25", optional = true }
ab_glyph = { version = "0.2", optional = true }

[dev-dependencies]
show-image = { version = "0.14.0", features = ["image"] }

[[example]]
name = "ncnn_image"
required-features = ["ncnn", "image"]

[[example]]
name = "ncnn_opencv"
required-features = ["ncnn", "opencv"]

[[example]]
name = "openvino_opencv"
required-features = ["openvino", "opencv"]
